Wrap long strings to prevent horizontal scroll
This is mainly useful for long URLs which could otherwise cause a
horizontal scroll bar to appear on low width screens.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,7 @@ body {
     margin: 0 auto;
     padding: 0 16px;
     line-height: 1.6;
+    overflow-wrap: break-word;
 }
 
 header#banner {
